Student summary report minor alignment fixes

--- a/app/styles/app-rwd/components/reports/assessment/_qz-summary-rwd.scss
+++ b/app/styles/app-rwd/components/reports/assessment/_qz-summary-rwd.scss
@@ -1,7 +1,7 @@
 .reports.assessment.qz-summary {
   @media only screen and (max-width: $screen-md - 1) {
     .summary-container {
-      grid-template-columns: auto auto;
+      grid-template-columns: 60% auto;
 
       .bubbles,
       .profile-image,
@@ -13,7 +13,7 @@
         padding: 0;
 
         h5 {
-          width: max-content;
+          width: 100%;
           height: 30px;
         }
 
@@ -31,7 +31,7 @@
     .summary-container {
       .overview {
         h5 {
-          width: max-content;
+          width: 100%;
           height: max-content;
         }
       }
